--- a/OEP-6/OEP-6.mediawiki
+++ b/OEP-6/OEP-6.mediawiki
@@ -376,6 +376,11 @@ Green colored components represent '''dAPI.js'''. It is universal implementation
 ===dAPI provider===
 Blue colored components belong to specific implementation of dAPI provider. The implementation is out of scope of this proposal, but the implementator must adhere to the protocol used by dAPI.js.
 
+===Communication protocol===
+The communication protocol has RPC style of communication. The RPC is modeled on top of standard WebExtension message passing using <code>runtime.sendMessage</code> and <code>runtime.onMessage.addListener</code>. All the complications of WebExtension is hidden for both the '''dApp''' and '''dAPI provider''' when using dAPI.js.
+
+dAPI providers might use dAPI.js as the communication protocol, but they can also implement different protocols suitable for the specific environment (e.g: iOS, Android, Desktop).
+
 ==Rationale==
 
 '''''User story''''': As a '''dApp''' developer, I need to use a lightweight api for integration with Ontology network without requiring my users to share their private keys with me.
